--- a/src/components/feedback/feedbackOptions/Feedback.module.css
+++ b/src/components/feedback/feedbackOptions/Feedback.module.css
@@ -8,7 +8,7 @@
   font-size: 20px;
   line-height: 18px;
   cursor: pointer;
-  transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .button:focus,
